(library
  (name c11parser)
  (public_name c11parser_ng.parser)
  (flags :standard -w -67);
  (libraries sedlex c11lexer c11util)
  (preprocess (pps ppx_sexp_conv))
  )

(menhir
   (modules parser_raw)
   (flags (--exn-carries-state --external-tokens C11lexer.Token))
   )

(rule
  (target error_messages.ml)
  (deps   
          (:parser parser_raw.mly)
          (:msg errors.messages))
  (action (with-stdout-to %{target}
          (run menhir --external-tokens C11lexer.Token
                      %{parser} --base %{parser} --compile-errors %{msg})))
)
